fix: icon of university shrunk on small viewports

--- a/src/components/ui/List/List.module.scss
+++ b/src/components/ui/List/List.module.scss
@@ -55,3 +55,7 @@
 	gap: 0.4rem;
 	padding-bottom: 12px;
 }
+
+.Icon {
+	flex-shrink: 0;
+}
